# carvise

./: .gitignore  README.md  create-icon.js  index.html  package-lock.json  package.json  vite.config.js
electron/: main.js  platform.js  preload.js  processManager.js
scripts/: check-build-env.js
site/: index.html
src/: ._App.vue  App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  port.rs  process.rs  state.rs
src/components/: PortKiller.vue  SettingsModal.vue  TerminalPanel.vue
src/services/: tauriApi.ts
src/styles/: marvis-light.css
