[package]
name = "carvis"
version = "0.10.0"
description = "Carvis - 本地服务管理工具 (Tauri 版)"
authors = ["Yong"]
edition = "2021"

# 调试符号默认包含，发布构建由 profile 控制
[lib]
name = "carvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[profile.release]
# 注意：Tauri 命令靠 catch_unwind 把 panic 转成可读错误。若设为 "abort"，
# 任何命令内 panic 都会直接杀掉整个进程（连 WebView 一起崩），且前端只能收到
# 无 .message 的空错误（表现为 "Unknown error"）。因此必须保持 "unwind"。
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
